fix token logo alignment in stablevault

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -143,7 +143,7 @@ a:hover {
   display:none;
 }
 .token-logo-bump {
-  margin-top: 8px;
+  //margin-top: 8px;
 }
 .token-logo{
   width: 24px;
